# counterstrikesource-server

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  entrypoint.sh  mapcycle.bzl  maplist.bzl  repos.bzl  run-local.sh  server.cfg  steamapps.bzl  update-steamapps.sh
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  renovate.yml  test.yml  update-steamapps.yml
