module(name = "counterstrikesource_server")

bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_oci", version = "1.5.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_steam")

git_override(
    module_name = "rules_steam",
    commit = "fb679c469287c333496dac45c6fa000b01a57abf",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

steam = use_extension("@rules_steam//:extension.bzl", "steam")
steam.app(name = "counter_strike_source", app = "232330")
use_repo(steam, "counter_strike_source")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "debian",
    image = "docker.io/library/debian",
    tag = "stable-slim",
    platforms = ["linux/386"],
)
use_repo(oci, "debian")

repos = use_extension("//:repos.bzl", "repos_bzlmod")
use_repo(
    repos,
    "auth_by_steam_group",
    "disable_buyzones",
    "disable_radar",
    "disable_round_timer",
    "ffa_spawns",
    "free_for_all",
    "gungame",
    "maps",
    "map_settings",
    "max_cash",
    "metamod",
    "paintball",
    "remove_objectives",
    "respawn",
    "spawn_protection",
    "sourcemod",
)
