module(name = "counterstrikesource-server")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_oci", version = "2.2.2")
bazel_dep(name = "rules_steam")

git_override(
    module_name = "rules_steam",
    commit = "e15bbc46a91d46c5e04ef4710afc0b7facd6ae37",
    remote = "https://github.com/kleinpa/rules_steam.git",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian_i386",
    tag = "bookworm-slim",
    image = "docker.io/i386/debian",
    platforms = ["linux/386"],
)
use_repo(oci, "debian_i386", "debian_i386_linux_386")

repos = use_extension("//:repos.bzl", "repos_bzlmod")
use_repo(
    repos,
    "auth_by_steam_group",
    "disable_buyzones",
    "disable_radar",
    "disable_round_timer",
    "ffa_spawns",
    "free_for_all",
    "gungame",
    "maps",
    "map_settings",
    "max_cash",
    "metamod",
    "paintball",
    "remove_objectives",
    "respawn",
    "spawn_protection",
    "sourcemod",
)

steamapps = use_extension("//:steamapps.bzl", "steamapps_bzlmod")
use_repo(steamapps, "counterstrikesource_dedicated")
